giao diện ẩn luồng xử lý bước tạo

--- a/src/app/main/contract-template/shared/model/determine-signer/determine-signer.component.scss
+++ b/src/app/main/contract-template/shared/model/determine-signer/determine-signer.component.scss
@@ -506,3 +506,31 @@ input[type="checkbox"] {
 .btn-outline-primary:hover{
   color: grey;
 }
+
+.contract__content--title-doi-tac {
+  display: flex;
+  color: #106DB6;
+  align-items: center;
+  margin-bottom: 8px;
+
+  > div {
+    width: 158px;
+  }
+
+  > input.input1 {
+    padding-left: 10px;
+    outline: none;
+    height: 37px;
+    width: 100%;
+    border-radius: 7px;
+    border: 1px solid #106DB6;
+  }
+  > input.input2 {
+    padding-left: 10px;
+    outline: none;
+    height: 37px;
+    width: 40%;
+    border-radius: 7px;
+    border: 1px solid #106DB6;
+  }
+}
