--- a/src/app/main/contract-template/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract-template/shared/model/determine-signer/determine-signer.component.html
@@ -8,11 +8,16 @@
         oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
     </div>
     <div class="contract--content">
-      <div class="contract__content--title">
-        <div>{{'organization.me' | translate | uppercase}} -</div>
-        <input type="text" [(ngModel)]="data_organization.name">
+      <div class="contract__content--title-doi-tac">
+        <div style="width: 85px">
+          {{ "organization.me" | translate | uppercase }}&nbsp;<span style="color: red">*</span>
+        </div>
+        <input class="input1" type="text" [(ngModel)]="data_organization.name" />
+        <div style="width: 120px; margin-left: 5px">
+          {{'hide.processing.thread' | translate}}
+        </div>
+        <input type ="checkbox">
       </div>
-
 
       <div class="contract__content--participants">
 
@@ -687,10 +692,18 @@
         [(ngModel)]="item.ordering">
     </div>
     <div class="contract--content">
-      <div class="contract__content--title">
-        <div style="width: 72px">{{'doi_tac' | translate | uppercase}} -</div>
-        <input type="text" placeholder="{{(item.type == 2 ? 'nhap_ten_doi_tac_to_chuc' : '') | translate}}"
-          [(ngModel)]="item.name" disabled>
+      <div class="contract__content--title-doi-tac">
+        <div style="width: 85px">
+          {{ "doi_tac" | translate | uppercase }}&nbsp;<span style="color: red">*</span>
+          -
+        </div>
+        <input class="input1" type="text" placeholder="{{
+            (item.type == 2 ? 'nhap_ten_doi_tac_to_chuc' : '') | translate
+          }}" [(ngModel)]="item.name" [disabled]="item.type == 3" />
+          <div style="width: 120px; margin-left: 5px">
+            {{'hide.processing.thread' | translate}}
+          </div>
+          <input type ="checkbox">
       </div>
 
       <div *ngIf="this.dataParnterOrganization().length >= 1" style="display: flex; justify-content: flex-end">
