--- a/src/app/main/contract/contract.component.html
+++ b/src/app/main/contract/contract.component.html
@@ -176,7 +176,7 @@
         </div>
 
         <div class="col-md-1 btn_search" style="padding-top: 10px;">
-            <button *ngIf="status == 'draft'" (click)="release()" class="btn btn-lg btn-block btn_submit">{{'release'|translate}}</button>
+            <button *ngIf="status == 'draft' && this.isOrg == 'off'" (click)="release()" class="btn btn-lg btn-block btn_submit">{{'release'|translate}}</button>
         </div>
 
         <div class="row list_header" *ngIf="pageTotal > 0;">
