--- a/src/app/main/contract-folder/current-folder/add-contract-folder/add-contract-folder.component.html
+++ b/src/app/main/contract-folder/current-folder/add-contract-folder/add-contract-folder.component.html
@@ -19,6 +19,99 @@
       <div class="contract-name"></div>
       <div class="contract-partner"></div>
     </div>
+    <div class="col-md-4" class="container-fluid">
+      <ng-template [ngIf]="!roleMess">
+  
+          <div class="row list_header" *ngIf="pageTotal > 0;">
+              <div class="col-md-4"></div>
+              <div class="col-md-2">{{'create-date' | translate}}</div>
+              <div class="col-md-2">{{'expiration-date' | translate}}</div>
+              <div class="col-md-3">{{'action' | translate}}</div>
+          </div>
+  
+          <div class="item_contract" *ngFor="let item of contracts | paginate:{itemsPerPage: page, currentPage:p, totalItems: pageTotal}">
+              <div class="row">
+                  <!--Cột 1-->
+                  <div class="col-md-4">
+                      <div class="row">
+                          <div class="col-md-11">
+                              <div class="item_contract_name">
+                                  <a class="item_contract_name" style="text-decoration: none;">
+                                      {{item.name}}
+                                  </a>
+                              </div>
+  
+                              <!-- <div class="row" *ngFor="let itemPar of sortParticipant(item.participants); let index = index">
+                                  <div class="item_contract_infor">{{'side' | translate}} 
+                                  </div>
+                              </div> -->
+  
+                              <div class="row">
+                                  <div class="item_contract_infor">{{'contract.status' | translate}}:
+                                      <span class="status_blue"></span>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+  
+                  <!--Cột 2: Ngày tạo-->
+                  <div class="col-md-2 calendar_create">
+                      <div><i class="fa fa-calendar fa_icon"></i><span class="item_date">{{item.created_at | date:
+                              'dd/MM/yyyy HH:mm'}}</span></div>
+                  </div>
+  
+                  <!--Cột 3: Ngày hết hạn ký-->
+                  <div class="col-md-2 calendar_deadline">
+                      <div style="display: flex; justify-content: center;">
+                          <div class="div_icon"><i class="fa fa-calendar fa_icon"></i><span class="item_date">{{item.sign_time | date:
+                                  'dd/MM/yyyy'}}</span></div>
+                      </div>
+                  </div>
+  
+                  <!--Cột 5: Input checkbox-->
+                  <div class="col-md-1 item_icon">
+                      <div style="display: flex; justify-content: center;">
+                          <div class="div_icon">
+                              <div class="col-md-1 calendar_create">
+                                  <div>
+                                      <input name="item" type="checkbox" value="{{item.contractId}}" [(ngModel)]="item.checked" />
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+  
+          <div *ngIf="pageTotal == 0" style="height: 100px;display: table;top: 0;left: 0;width: 100%;text-align: center;margin-top: 20px;">
+              <div style="display: table-cell;vertical-align: middle;">
+                  <img src="../../../assets/img/empty_data.svg" />
+                  <div style="color: #94A7C6">{{'no.data' | translate}}</div>
+              </div>
+          </div>
+  
+          <div class="contract_footer">
+              <!-- <div class="footer_contract_per_page">
+                  <div>Hiển thị&nbsp;</div>
+                  <select [(ngModel)]="this.page" (change)="changePageNumber($event)">
+                      <option value="" hidden>{{this.page}}</option>
+                      <option *ngFor="let d of this.pageOptions">{{d}}</option>
+                  </select>
+                  <div>&nbsp;{{'contracts.per.page' | translate}}</div>
+              </div> -->
+              <div class="footer_title">
+              </div>
+              <!-- <div class="footer_pagination">
+                  <pagination-controls *ngIf="pageTotal > 0;" (pageChange)="p=$event; getContractList()" previousLabel="" nextLabel=""></pagination-controls>
+              </div> -->
+              <!-- <div class="footer_page_number">{{'chart.number' | translate}}: {{this.getPageStartEnd()}} / {{pageTotal}} 
+              </div> -->
+          </div>
+      </ng-template>
+  
+      <div>{{roleMess | translate}}</div>
+  </div>
 
     <div class="row" style="justify-content: center;padding-top: 10px;">
       <button class="cancel-button" (click)="dialog.closeAll()" type="button">{{'btn.close' | translate}}</button>
