--- a/src/app/main/contract-template/shared/sign-sample-contract/sign-contract/sign-contract.component.html
+++ b/src/app/main/contract-template/shared/sign-sample-contract/sign-contract/sign-contract.component.html
@@ -8,5 +8,5 @@
 
 <div class="text-sign" *ngIf="sign.sign_unit == 'text' || sign.sign_unit == 'so_tai_lieu'">
 <!--  <input id="input-text" type="text" [placeholder]="sign.sign_unit == 'text' ? 'Nhập text' : 'Nhập số tài liệu'">-->
-  <span id="input-text">{{getText(sign)}}</span>
+  <span [ngStyle]="getStyleText(sign)" id="input-text">{{getText(sign)}}</span>
 </div>
