update quan ly cts

--- a/src/app/main/digital-certificate/digital-certificate-add/digital-certificate-add.component.scss
+++ b/src/app/main/digital-certificate/digital-certificate-add/digital-certificate-add.component.scss
@@ -22,7 +22,22 @@
   outline:0px;
   border-radius: 0 5px 5px 0;
 }
-
+.multiSelect {
+  height: 50px;
+  display: flex;
+  flex-wrap: wrap;
+  max-height: 200px; /* Điều chỉnh chiều cao tối đa */
+  overflow-y: auto; /* Tạo thanh cuộn khi vượt quá chiều cao tối đa */
+}
+.p-multiselect-label {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 100%;
+}
+p-multiselect-chip{
+  width: 100%;
+}
 .input-data {
   border: 1px solid #106DB6;
   border-radius: 5px;
