--- a/src/app/main/digital-certificate/digital-certificate-add/digital-certificate-add.component.html
+++ b/src/app/main/digital-certificate/digital-certificate-add/digital-certificate-add.component.html
@@ -27,25 +27,28 @@
     </div>
 
 
-    <form  [formGroup]="addFormEmail">
+    <!-- <form  [formGroup]="addFormEmail"> -->
       <div class="row" style="padding-top: 20px;">
         <div class="col-md-12">
           <div class="label text-color">Email
             <span class="required-title">*</span>
           </div>
 
-          <div>
-            <p-dropdown panelStyleClass="font" appendTo="body" [options]="emailList" formControlName="email"
-              optionLabel="email" optionValue="id" placeholder="Chọn email" [filter]="true" filterBy="email"
-              [showClear]="true" (onFilter)="getListAllEmail($event)" display="chip" [multiple]="true"></p-dropdown>
-              <!-- <p-multiSelect [options]="emailList" formControlName="email" optionLabel="email"></p-multiSelect> -->
+          <div >
+            <p-multiSelect panelStyleClass="font" appendTo="body" [options]="emailList" formControlName="email"
+              optionLabel="email" optionValue="email" placeholder="Chọn email"
+              [filter]="true" filterBy="email"
+              [showClear]="true" (onFilter)="getListAllEmail($event)" display="chip" [multiple]="true" (onChange)="onSelectionChange()"
+              >
+            </p-multiSelect>
           </div>
+
           <!-- <div *ngIf="submittedUser && fUser.email.errors" class="invalid">
               <div *ngIf="fUser.email.errors.required">Email không được để trống</div>
           </div> -->
         </div>
       </div>
-    </form>
+    <!-- </form> -->
 
 
 
@@ -67,7 +70,7 @@
           <div class="label text-color">{{'file.certificate' | translate}}
             <span class="required-title">*</span>
           </div>
-          <input id="file-input" type="file" accept=".pdf" (change)="fileChanged($event)" style="display: none;" />
+          <input id="file-input" type="file" accept=".p12" (change)="fileChanged($event)" style="display: none;" />
           <div class="file-contract" (click)="addFile()">
             <img src="assets/img/upload_file.svg" alt="mobifone.contract">
             <div style="padding-top: 7px;"><span style="color: #798693"
