--- a/src/app/main/digital-certificate/digital-certificate.component.html
+++ b/src/app/main/digital-certificate/digital-certificate.component.html
@@ -3,15 +3,21 @@
     <div class="col-md-3" *ngIf="isQLDC_03">
       <div>{{'notation' | translate}}</div>
       <div class="input-line">
-        <input type="text" [(ngModel)]="username" class="input_text"/>
+        <input type="text" [(ngModel)]="FileName" class="input_text"/>
       </div>
     </div>
     <div class="col-md-3" *ngIf="isQLDC_03">
       <div>{{'contract.status' | translate}}</div>
       <div>
-          <p-treeSelect
+          <!-- <p-treeSelect
             placeholder="{{'all' | translate}}"
             [droppable]="true">
+            [options]="listStatus"
+
+          </p-treeSelect> -->
+          <p-treeSelect placeholder="{{'all' | translate}}"
+          [options]="listStatus"
+          [(ngModel)]="status">
           </p-treeSelect>
       </div>
     </div>
@@ -36,7 +42,7 @@
       </ng-template>
       <ng-template pTemplate="body" let-list>
           <tr>
-              <td>{{list.fileName}}</td>
+              <td>{{list.keyStoreFileName}}</td>
               <td>{{list.keystoreDateStart | date:'dd/MM/yyyy HH:mm'}}</td>
               <td>{{list.keystoreDateEnd | date:'dd/MM/yyyy HH:mm'}}</td>
 
