--- a/src/app/main/contract/contract.component.html
+++ b/src/app/main/contract/contract.component.html
@@ -175,7 +175,7 @@
             </div>
         </div>
 
-        <div class="col-md-1 btn_search" style="padding-top: 10px;">
+        <div class="btn-size btn_search" style="padding-top: 10px;">
             <button *ngIf="status == 'draft' && this.isOrg == 'off'" (click)="release()" class="btn btn-lg btn-block btn_submit">{{'release'|translate}}</button>
         </div>
 
