--- a/src/app/main/digital-certificate/digital-certificate.component.html
+++ b/src/app/main/digital-certificate/digital-certificate.component.html
@@ -17,6 +17,7 @@
           </p-treeSelect> -->
           <p-treeSelect placeholder="{{'all' | translate}}"
           [options]="listStatus"
+          [value]="status"
           [(ngModel)]="status">
           </p-treeSelect>
       </div>
