--- a/src/app/main/user/user.component.html
+++ b/src/app/main/user/user.component.html
@@ -13,6 +13,7 @@
           </p-treeSelect>
       </div>
     </div>
+
     <div class="col-md-3" *ngIf="isQLND_03">
       <div>{{'unit.email' | translate}}</div>
       <div class="input-line">
@@ -20,7 +21,14 @@
       </div>
     </div>
 
-    <div class="col-md-6 btn_search">
+    <div class="col-md-3" *ngIf="isQLND_03">
+      <div>{{'user.name' | translate}}</div>
+      <div class="input-line">
+        <input type="text" [(ngModel)]="name" class="input_text"/>
+      </div>
+    </div>
+
+    <div class="col-md-3 btn_search">
       <button *ngIf="isQLND_03" class="btn btn-lg btn-block btn_submit" (click)="searchUser()">{{'btn.search' | translate }}</button>
         <a *ngIf="isQLND_01" class="btn btn-lg btn-block btn_submit" [routerLink]="['/main/form-user/add']" (click)="addUser()">
           {{'btn.add' | translate }}
