--- a/src/app/main/contract-folder/contract-folder.component.html
+++ b/src/app/main/contract-folder/contract-folder.component.html
@@ -65,14 +65,14 @@
         </div>
       </div>
       <div class="col-md-3 calendar_create">
-        <div><i class="fa fa-calendar fa_icon"></i>
+        <!-- <div><i class="fa fa-calendar fa_icon"></i>
           <span class="item_date">{{getDateTime(item.createdAt) | date: 'dd/MM/yyyy HH:mm'}}</span>
-        </div>
+        </div> -->
       </div>
       <div class="col-md-3 calendar_last_updated">
-        <div><i class="fa fa-calendar fa_icon"></i>
+        <!-- <div><i class="fa fa-calendar fa_icon"></i>
           <span class="item_date">{{getDateTime(item.updatedAt) | date: 'dd/MM/yyyy HH:mm'}}</span>
-        </div>
+        </div> -->
       </div>
 
       <div class="col-md-2 item_icon">
