--- a/src/app/main/contract-folder/current-folder/current-folder.component.html
+++ b/src/app/main/contract-folder/current-folder/current-folder.component.html
@@ -1,5 +1,5 @@
 <div class="col-md-4" class="container-fluid">
-    <ng-template [ngIf]="roleMess">
+    <ng-template [ngIf]="isOrg">
         <div class="col-md-12" style="padding-top: 20px;">
             <div class="input-line search">
                 <img src="../../assets/img/icon_search.svg" class="input-img" />
@@ -35,10 +35,18 @@
                                 </a>
                             </div>
 
-                            <!-- <div class="row" *ngFor="let itemPar of sortParticipant(item.participants); let index = index">
+                            <div class="row" *ngFor="let itemPar of sortParticipant(item.participants); let index = index">
                                 <div class="item_contract_infor">{{'side' | translate}} {{getNameOrganization(itemPar, index)}}
                                 </div>
-                            </div> -->
+                            </div>
+
+                            <div class="row">
+                                <div class="item_contract_infor">{{'contract.status' | translate}}:
+                                    <span class="status_blue">{{item.filter_status | pipe | translate}}
+                                        {{getNameStatusCeca(item.status, item.ceca_push, item.ceca_status) |
+                                        translate}}</span>
+                                </div>
+                            </div>
 
                         </div>
                     </div>
@@ -60,50 +68,12 @@
                 <div class="col-md-3 item_icon">
                     <div style="display: flex; justify-content: center;">
                         <div class="div_icon">
-                            <img src="../../assets/img/icon_copy.svg" class="img_icon" ngbTooltip="{{'contract.copy' | translate}}" />
-                        </div>
-                        <div class="div_icon">
-                            <img src="../../assets/img/icon_edit.svg" class="img_icon" ngbTooltip="{{'contract.edit' | translate}}"/>
-                        </div>
-                        <div class="div_icon">
                             <img src="../../assets/img/icon_delete.svg" class="img_icon" ngbTooltip="{{'contract.delete' | translate}}"/>
-                        </div>
-                        <div class="div_icon">
-                            <img src="../../assets/img/icon_view_connect.svg" class="img_icon" ngbTooltip="{{'contract.connect.view' | translate}}"/>
                         </div>
                         <!-- 
                             <div class="div_icon" *ngIf="status == 'processing' || status == 'expire'">
                                 <img src="../../assets/img/icon_add_connect.svg" class="img_icon" ngbTooltip="{{'contract.connect.add' | translate}}" (click)="addContractConnect(item.id)"/>
                             </div> -->
-                        <div class="div_icon">
-                            <img src="../../assets/img/icon_add_connect.svg" class="img_icon" ngbTooltip="{{'contract.connect.add' | translate}}"/>
-                        </div>
-                        <div class="div_icon">
-                            <img src="../../assets/img/icon_stop.svg" class="img_icon" ngbTooltip="{{'contract.cancel' | translate}}"/>
-                        </div>
-                        <div class="div_icon">
-                            <img src="../../assets/img/icon_download.svg" class="img_icon" ngbTooltip="{{'contract.download' | translate}}"/>
-                        </div>
-                        <div class="div_icon">
-                            <img src="../../assets/img/icon_share.svg" class="img_icon" ngbTooltip="{{'contract.share' | translate}}"/>
-                        </div>
-                        <div class="div_icon" *ngIf="status == 'cancel'">
-                            <!-- <img src="../../assets/img/view_reason_icon.svg" class="img_icon" ngbTooltip="{{'reasson.cancel.contract' | translate}}" (click)="ViewReasonCancel(item.id)" /> -->
-                            <img src="../../assets/img/cancel_notes.svg" class="img_icon" ngbTooltip="{{ 'reasson.cancel.contract' | translate}}"/>
-                        </div>
-                    </div>
-                </div>
-
-                <!--Cột 5: Input checkbox-->
-                <div class="col-md-1 item_icon">
-                    <div style="display: flex; justify-content: center;">
-                        <div class="div_icon">
-                            <div class="col-md-1 calendar_create">
-                                <div>
-                                    <input name="item" type="checkbox" value="{{item.contractId}}" [(ngModel)]="item.checked" />
-                                </div>
-                            </div>
-                        </div>
                     </div>
                 </div>
             </div>
