--- a/src/app/main/digital-certificate/digital-certificate-add/digital-certificate-add.component.html
+++ b/src/app/main/digital-certificate/digital-certificate-add/digital-certificate-add.component.html
@@ -79,11 +79,11 @@
           </div>
         </div>
 
-        <!-- <div class="form-group">
+        <div class="form-group">
           <div class="invalid" *ngIf="errorContractFile!=''">
             {{errorContractFile | translate}}
           </div>
-        </div> -->
+        </div>
       </div>
     </div>
 
