--- a/src/app/main/digital-certificate/digital-certificate-detail/digital-certificate-detail.component.html
+++ b/src/app/main/digital-certificate/digital-certificate-detail/digital-certificate-detail.component.html
@@ -18,7 +18,7 @@
       <div class="col-md-12" style="display: flex;justify-content: flex-start;">
         <div class="label_detail text-color">
           <div>
-            <input type="radio" />
+            <input type="radio" checked/>
           </div>&nbsp;
           <div>
             {{
