--- a/src/app/main/digital-certificate/digital-certificate-edit/digital-certificate-edit.component.html
+++ b/src/app/main/digital-certificate/digital-certificate-edit/digital-certificate-edit.component.html
@@ -26,7 +26,7 @@
       <div class="col-md-12" style="display: flex;justify-content: space-evenly;">
         <div class="label_detail text-color">
           <div>
-            <input type="radio" name="confirm-radio-consider" [value]="1" formControlName="status" name="status">
+            <input type="radio" name="confirm-radio-consider" [value]="'1'" formControlName="status" name="status">
           </div>&nbsp;
           <div>
             {{'unit.active' | translate}}
@@ -34,7 +34,7 @@
         </div>
         <div class="label_detail text-color">
           <div>
-            <input type="radio" name='confirm-radio-consider' [value]="0" formControlName="status" name="status">
+            <input type="radio" name='confirm-radio-consider' [value]="'0'" formControlName="status" name="status">
           </div>&nbsp;
           <div>
             {{'unit.inactive' | translate}}
